[build-system]
requires = ["setuptools>=63", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "Debug"
version = "0.1.0"
description = "Application description"
requires-python=">=3.7,<4"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["recursiveai*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=recursiveai"
testpaths = ["src/tests"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116"]

[tool.bandit]
exclude_dirs = ["src/tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
stubPath = ""
